# robot_gold

./: CMakeLists.txt  package.xml
include/robot_gold/: aruco_detector.hpp  encoder_node.hpp  help.hpp  imu_node.hpp  io_node.hpp  lidar_node.hpp  line_follow.hpp  line_node.hpp  motor_node.hpp  pid.hpp  planar_imu_integrator.hpp
src/: 30_4_working.txt  9_5_corrid_follow_work.txt  camera_node.cpp  imu_node.cpp  io_node.cpp  lidar_node.cpp  line_follow.cpp  line_node.cpp  motor_node.cpp  smth.cpp
